# image_raw

./: .gitignore  README.md  pyproject.toml
image_raw/: align_images.py
notebooks/: align_eclipse_images_final.ipynb  make_time_lapse.ipynb
tests/: test_image_raw.py
